[package]
name = "status"
description = "Status line generator using IO uring"
version = "0.1.0"
authors = ["Julian Ganz <neither@nut.email>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
either = "1.12"
iou = "0.3"
libc = "0.2"
rustix = {version = "0.38", features = ["time"]}

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
