[package]
name = "status"
description = "Status line generator using IO uring"
version = "0.2.0"
authors = ["Julian Ganz <neither@nut.email>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
either = "1.12"
enum-map = "2.7"
io-uring = "0.6"
libc = "0.2"
rustix = {version = "0.38", features = ["time"]}

[dev-dependencies]
mock_instant = "0.5"

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
